# ngram-llm-analysis

./: .gitignore  DIARY.md  README.md  extract_1gb_words.sh  plotting.ipynb  pyproject.toml  requirements.txt
checkpoints/ngram/: test_ruleset.json  test_smoothing.json
checkpoints/tokenizer/: hungarian_wiki_1gb.json  small_500.json  strange_1gb.json  tinystories_1gb.json  tokenizer.json  tokenizer_32768.json  tokenizer_8192.json  tokenizer_bytes.json  tokenizer_textbooks.json  tokenizer_wikipedia.json
configs/: llama_large.yaml  llama_medium.yaml  llama_small.yaml
exploration/: tokenize.ipynb
ngram-llm-analysis/: example.ipynb  train.py
ngram-llm-analysis/utils/: __init__.py  dataset.py  metrics.py  tokenizer.py
ngram-server/: Cargo.toml  README.md
ngram-server/src/: main.rs
ngram_llm_analysis/: example.ipynb  stats.py  test.ipynb  test_ngram_stats.ipynb  train.py
ngram_llm_analysis/utils/: __init__.py  dataset.py  metrics.py  model.py  ngram.py  sample.py  search.py  test.py  tokenizer.py
