[project]
name = "ngram-llm-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "numpy",
    "matplotlib",
    "tqdm",
    "wandb",
    "torch",
    "torchvision",
    "torchaudio",
    # hugging face
    "transformers",
    "tokenizers",
    "accelerate",
    "ipykernel>=6.29.5",
    "ngram-trie>=1.2.1",
    "requests>=2.32.3",
]
